--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -483,7 +483,7 @@
                <cursorShape>IBeamCursor</cursorShape>
               </property>
               <property name="toolTip">
-               <string>Your current spendable balance</string>
+               <string/>
               </property>
               <property name="text">
                <string notr="true">0.000 000 00 DMC</string>
@@ -515,7 +515,7 @@
                <cursorShape>IBeamCursor</cursorShape>
               </property>
               <property name="toolTip">
-               <string>Your current spendable balance</string>
+               <string/>
               </property>
               <property name="text">
                <string notr="true">0.000 000 00 USD</string>
@@ -547,7 +547,7 @@
                <cursorShape>IBeamCursor</cursorShape>
               </property>
               <property name="toolTip">
-               <string>Your current spendable balance</string>
+               <string/>
               </property>
               <property name="text">
                <string notr="true">0.000 000 00 USD</string>
@@ -592,7 +592,7 @@
                <cursorShape>IBeamCursor</cursorShape>
               </property>
               <property name="toolTip">
-               <string>Your current spendable balance</string>
+               <string/>
               </property>
               <property name="text">
                <string notr="true">0.000 000 00 DMC</string>
@@ -624,7 +624,7 @@
                <cursorShape>IBeamCursor</cursorShape>
               </property>
               <property name="toolTip">
-               <string>Your current spendable balance</string>
+               <string/>
               </property>
               <property name="text">
                <string notr="true">0.000 000 00 USD</string>
